# fastapi-sqlalchemy-async

./: .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: ed40317fe4a1_.py
src/: main.py  utils.py
src/api/: deps.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: login.py  users.py
src/core/: config.py  security.py
src/crud/: base.py  crud_user.py
src/db/: base.py  base_class.py  session.py
src/models/: __init__.py  auth.py
src/schemas/: __init__.py  user.py
